# DrawApp

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: canvas.c  canvas.h  colors.c  colors.h  input.c  input.h  main.c  stubs.c  ui.c  ui.h
